# bigint

./: CMakeLists.txt  README.md  __unsafe_vector.hpp  _core_arithmetics.cpp  _core_arithmetics.hpp  ass.cpp  big_integer.cpp  big_integer.h  big_integer.hpp  big_integer_testing.cpp  bigint_privat.cpp  bigint_w_asse.cpp  checker.cpp  exec.cpp  full_test.sh  generator.cpp  main.cpp  mega_vector.h  shared_ptr.h  stress.sh  vector.hpp
engine/: _asm_vector.asm
gtest/: gtest-all.cc  gtest.h  gtest_main.cc
tmp/: calc_out.py  calc_raw.py  checker  exec  generator
